buy button change

--- a/product.html
+++ b/product.html
@@ -30,7 +30,7 @@
             <li><strong>Delivery:</strong> 3–5 working days</li>
         </ul>
 
-        <button class="buy-btn">Buy Now</button>
+        <button class="buy-btn" style="color: white;">Buy Now</button>
         <p class="secure">✔ Secure payment | ✔ Easy returns</p>
 
     </div>
